syntax = "proto3";

package comment;

service CommentService {
    rpc getAllCommentById (GetAllCommentByIdRequest) returns (GetAllCommentByIdResponse);
    rpc addCommentToPost (AddCommentToPostRequest) returns (AddCommentToPostResponse);
    rpc likeComment (LikeCommentRequest) returns (LikeCommentResponse);
}
// 
message GetAllCommentByIdRequest {
    string postId = 1;
}
message Comment {
    string postId = 1;
    string authorId = 2;
    string content = 3;
}
message GetAllCommentByIdResponse {
    repeated Comment data = 1;
}

//
message AddCommentToPostRequest {
    string postId = 1;
    string authorId = 2;
    string content = 3;
}
message AddCommentToPostResponse {
    Comment data = 1;
}

//
message LikeCommentRequest {
    string commentId = 1;
    string userId = 2;
}
message LikeCommentResponse {
    Comment data = 1;
}