syntax = "proto3";

package post;

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

service PostService {
    rpc getAllPost (GetAllPostRequest) returns (GetAllPostResponse);
    rpc createPost (CreatePostRequest) returns (CreatePostResponse);
    rpc postCommentByPostId (PostCommentByPostIdRequest) returns (PostCommentByPostIdResponse);
    rpc postReaction(PostReactionRequest) returns (PostReactionResponse);
}
// getAllPost
message GetAllPostRequest {
    int32 pageSize = 1;
    string lastId = 2;
}

message Post {
    string _id = 1;
    string authorId = 2;
    string content = 3;
    bool isUpdated = 4;
    int32 commentCount = 5;
    repeated string likedBy = 6;
    Timestamp createdDate = 7;
    repeated string assests = 8;
}

message GetAllPostResponse {
    repeated Post data = 1;
    string lastId = 2;
}
// createPost

message CreatePostRequest {
    string authorId = 1;
    string content = 2;
}

message CreatePostResponse {
    int32 status = 1;
    string message = 2;
}

message GetPostByIdRequest {
    string postId = 1;
}

message GetPostByIdResponse {
    Post data = 1;
}

message PostCommentByPostIdRequest {
    string postId = 1;
}

message PostCommentByPostIdResponse {
    int32 status = 1;
    string message = 2;
}

message PostReactionRequest {
    string postId = 1;
    string userId = 2;
}

message PostReactionResponse {
    int32 status = 1;
    string message = 2;
}

